fix: update style to remove scrollbars 🖱️

--- a/style.scss
+++ b/style.scss
@@ -7,7 +7,7 @@
 }
 
 body {
-  margin: 2px;
+  margin: 0;
   overscroll-behavior: none;
   background-color: black;
   color: white;
